samples/_failures_safe/1761336614_9f8181_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a573cca1.c: In function ‘main’:
./samples/SAFE/__tmp_a573cca1.c:163:5: error: expected declaration or statement at end of input
  163 |     return 0;
      |     ^~~~~~
